--- a/Emilia-Clarke-Bot.html
+++ b/Emilia-Clarke-Bot.html
@@ -214,7 +214,7 @@
             const videoId = urlParams.get('video'); // Get the 'video' parameter from the URL
             
             // Base URL for the video links
-            const baseUrl = "https://aklinksz.fun/watch/";
+            const baseUrl = "https://infoshotz.xyz/watch/";
             let redirectUrl = null;
 
             // Check if videoId is provided
