--- a/Alex-Movies-Bot.html
+++ b/Alex-Movies-Bot.html
@@ -33,7 +33,7 @@
             top: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.6); /* Darker background */
+            background-color: rgba(0, 0, 0, 0.6);
             justify-content: center;
             align-items: center;
         }
@@ -120,19 +120,16 @@
     <script type="text/javascript">
         let verifyCount = 0;
 
-        // Array of URLs for verification buttons
-        const urls = [
-            'https://luglawhaulsano.net/4/7821485',
-            'https://luglawhaulsano.net/4/7697132',
-            'https://luglawhaulsano.net/4/7536317',
-            'https://luglawhaulsano.net/4/8303262',
-            'https://luglawhaulsano.net/4/8303261',
-            'https://luglawhaulsano.net/4/8303260'
+        // Array of links to assign to buttons
+        const links = [
+            'https://chikraighotoops.com/4/7536317',
+            'https://chikraighotoops.com/4/8303260',
+            'https://chikraighotoops.com/4/7821485',
+            // Add more links here if needed
         ];
 
         document.addEventListener("DOMContentLoaded", function () {
-            // Start the countdown for the modal
-            let seconds = 15; // Countdown set to 15 seconds
+            let seconds = 15;
             const countdownElement = document.getElementById('countdown');
             countdownElement.innerText = seconds;
 
@@ -147,36 +144,43 @@
                 }
             }, 1000);
 
-            // Shuffle URLs and assign to buttons
-            shuffle(urls);
-            document.getElementById('verifyBtn1').setAttribute('onclick', `openPopup('verifyBtn1', '${urls[0]}')`);
-            document.getElementById('verifyBtn2').setAttribute('onclick', `openPopup('verifyBtn2', '${urls[1]}')`);
-            document.getElementById('verifyBtn3').setAttribute('onclick', `openPopup('verifyBtn3', '${urls[2]}')`);
+            // Randomly assign links to buttons
+            assignRandomLinks();
         });
 
-        // Shuffle function to randomize URLs
-        function shuffle(array) {
-            for (let i = array.length - 1; i > 0; i--) {
-                const j = Math.floor(Math.random() * (i + 1));
-                [array[i], array[j]] = [array[j], array[i]];
+        function assignRandomLinks() {
+            const buttons = [
+                { id: 'verifyBtn1', link: '' },
+                { id: 'verifyBtn2', link: '' },
+                { id: 'verifyBtn3', link: '' }
+            ];
+
+            // Shuffle links and assign to buttons
+            for (let i = 0; i < buttons.length; i++) {
+                const randomIndex = Math.floor(Math.random() * links.length);
+                buttons[i].link = links[randomIndex];
+                // Remove the assigned link to avoid duplication
+                links.splice(randomIndex, 1);
+                // Set the button's onclick to openPopup with the assigned link
+                document.getElementById(buttons[i].id).onclick = function() {
+                    openPopup(buttons[i].id, buttons[i].link);
+                };
             }
         }
 
         function openPopup(verifyBtnId, url) {
             const button = document.getElementById(verifyBtnId);
-            if (button.disabled) return; // Prevent multiple clicks
+            if (button.disabled) return;
             button.disabled = true;
 
             const popup = window.open(url, '_blank', 'width=800,height=600,scrollbars=yes');
 
-            // Check if popup is blocked
             if (!popup || popup.closed || typeof popup.closed === 'undefined') {
                 alert('Popup blocked! Please allow popups for this site.');
                 button.disabled = false;
                 return;
             }
 
-            // Close the popup after 3 seconds and mark button as verified
             setTimeout(function () {
                 if (popup) {
                     popup.close();
@@ -210,18 +214,18 @@
 
         function redirectToTelegram() {
             const urlParams = new URLSearchParams(window.location.search);
-            const linkParam = urlParams.get('start') || 'defaultParam'; // Default parameter if 'start' is not found
+            const linkParam = urlParams.get('start') || 'defaultParam';
             window.location.href = 'https://t.me/filesharing306_bot?start=' + linkParam;
         }
 
         function openModal() {
             const modal = document.getElementById("myModal");
-            modal.style.display = "flex";  // Show the modal with flex (to center it)
+            modal.style.display = "flex";
         }
 
         function hideVideo() {
             const videoContainer = document.getElementById("videoContainer");
-            videoContainer.style.display = "none";  // Hide the video
+            videoContainer.style.display = "none";
         }
     </script>
 </head>
@@ -230,12 +234,10 @@
     <h2 style="color:red;">PLEASE WAIT FOR THE TIMER TO FINISH</h2>
     <h3>MODAL WILL OPEN IN <span id="countdown">15</span> SECONDS...</h3>
 
-    <!-- YouTube Video Embed Section -->
     <div id="videoContainer">
         <iframe id="youtubeVideo" src="https://www.youtube.com/embed/Icgd6qPQAZE?autoplay=1&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 
-    <!-- The Modal -->
     <div id="myModal" class="modal">
         <div class="modal-content">
             <div id="verificationMessage">
@@ -247,16 +249,13 @@
                 <p>HERE IS YOUR LINK:</p>
             </div>
             <div id="verifyButtons">
-                <!-- Verification Buttons inside the modal -->
                 <button id="verifyBtn1" class="verify-btn">VERIFY LINK 1</button>
                 <button id="verifyBtn2" class="verify-btn">VERIFY LINK 2</button>
                 <button id="verifyBtn3" class="verify-btn">VERIFY LINK 3</button>
             </div>
 
-            <!-- Redirect Button inside the modal -->
             <button id="redirectBtn" onclick="redirectToTelegram()">REDIRECT TO TELEGRAM</button>
         </div>
     </div>
 </body>
 </html>
-  
