--- a/Emilia-Clarke-Bot.html
+++ b/Emilia-Clarke-Bot.html
@@ -33,7 +33,7 @@
             top: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.6); /* Darker background */
+            background-color: rgba(0, 0, 0, 0.6);
             justify-content: center;
             align-items: center;
         }
@@ -96,38 +96,16 @@
             color: green;
             margin-top: 20px;
         }
-
-        #videoContainer {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        #youtubeVideo {
-            width: 80%;
-            max-width: 600px;
-            height: 315px;
-        }
-
-        @media (max-width: 600px) {
-            .modal-content {
-                width: 90%;
-            }
-            #youtubeVideo {
-                width: 100%;
-            }
-        }
     </style>
     <script type="text/javascript">
         let verifyCount = 0;
 
         // URLs for verification buttons
         const urls = [
-            'https://luglawhaulsano.net/4/7821485',
-            'https://luglawhaulsano.net/4/7697132',
-            'https://luglawhaulsano.net/4/7536317',
-            'https://luglawhaulsano.net/4/8303262',
-            'https://luglawhaulsano.net/4/8303261',
-            'https://luglawhaulsano.net/4/8303260'
+            'https://chikraighotoops.com/4/7536317',
+            'https://chikraighotoops.com/4/8303260',
+            'https://chikraighotoops.com/4/7821485',
+            // Add more links here if needed
         ];
 
         document.addEventListener("DOMContentLoaded", function () {
@@ -143,7 +121,6 @@
                 if (seconds <= 0) {
                     clearInterval(countdownInterval);
                     openModal();
-                    hideVideo();
                 }
             }, 1000);
 
@@ -169,14 +146,12 @@
 
             const popup = window.open(url, '_blank', 'width=800,height=600,scrollbars=yes');
 
-            // Check if popup is blocked
             if (!popup || popup.closed || typeof popup.closed === 'undefined') {
                 alert('Popup blocked! Please allow popups for this site.');
                 button.disabled = false;
                 return;
             }
 
-            // Close the popup after 3 seconds and mark button as verified
             setTimeout(function () {
                 if (popup) {
                     popup.close();
@@ -189,7 +164,6 @@
             const button = document.getElementById(verifyBtnId);
             button.classList.add('verified');
             button.innerText = button.innerText.replace('VERIFY LINK', 'VERIFIED');
-
             verifyCount++;
 
             if (verifyCount === 3) {
@@ -207,49 +181,12 @@
             document.getElementById('verificationMessage').style.display = 'none';
             document.getElementById('thankYouMessage').style.display = 'block';
         }
-
-        function redirectToVideo() {
-            // Get the 'video' parameter from the URL
-            const urlParams = new URLSearchParams(window.location.search);
-            const videoId = urlParams.get('video'); // Get the 'video' parameter from the URL
-            
-            // Base URL for the video links
-            const baseUrl = "https://infoshotz.xyz/watch/";
-            let redirectUrl = null;
-
-            // Check if videoId is provided
-            if (videoId) {
-                redirectUrl = baseUrl + videoId; // Construct the full URL
-            }
-
-            // Redirect if a valid videoId is provided
-            if (redirectUrl) {
-                window.location.href = redirectUrl;
-            } else {
-                document.getElementById("message").textContent = "No valid video ID provided. Please check the URL.";
-            }
-        }
-
-        function openModal() {
-            const modal = document.getElementById("myModal");
-            modal.style.display = "flex";  // Show the modal with flex (to center it)
-        }
-
-        function hideVideo() {
-            const videoContainer = document.getElementById("videoContainer");
-            videoContainer.style.display = "none";  // Hide the video
-        }
     </script>
 </head>
 <body>
     <br>
     <h2 style="color:red;">PLEASE WAIT FOR THE TIMER TO FINISH</h2>
     <h3>MODAL WILL OPEN IN <span id="countdown">15</span> SECONDS...</h3>
-
-    <!-- YouTube Video Embed Section -->
-    <div id="videoContainer">
-        <iframe id="youtubeVideo" src="https://www.youtube.com/embed/Icgd6qPQAZE?autoplay=1&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    </div>
 
     <!-- The Modal -->
     <div id="myModal" class="modal">
